# MIOpen

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.gputt  Getting_Started_FusioAPI.md  Getting_Started_FusionAPI.md  Jenkinsfile  LICENSE  LICENSE.txt  README.md  UBSanIgnoreList.txt  UBSanSuppress.supp  codecov.yml  conv2d.hpp  convolution.cpp  custom.properties  dev-requirements.txt  format.sh  fusion_test.sh  hcc-legacy.docker  hip-clang.docker  install_deps.cmake  min-requirements.txt  miopendriver_test.sh  mlir-requirements.txt  rbuild.ini  requirements.txt  rocfft_r2c_ex.cpp  skip-ci  static-test.docker
AddKernels/: CMakeLists.txt  addkernels.cpp  include_inliner.cpp  include_inliner.hpp  source_file_desc.cpp  source_file_desc.hpp  source_inliner.cpp  source_inliner.hpp  tinydir.h
add-dbs/: CMakeLists.txt  addDbs.cpp  embed.cpp
addkernels/: CMakeLists.txt  addkernels.cpp  include_inliner.cpp  include_inliner.hpp  source_file_desc.hpp
doc/: CMakeLists.txt  README.md  classification-map.xml  copyreadme.sh  requirements.txt
doc/html/: .buildinfo  DebugAndLogging.html  Getting_Started_FusionAPI.html  MI200AlternateImplementation.html  MIOpen_Porting_Guide.html  activation.html  apireference.html  batchnorm.html  cache.html  citation.html  convolution.html  datatypes.html  driver.html  dropout.html  embed.html  find_and_immediate.html  finddb.html  fusion.html  genindex.html  handle.html  index.html  install.html  loss.html  lrn.html  objects.inv  perfdatabase.html  pooling.html  reduction.html  releasenotes.html  rnn.html  search.html  searchindex.js  softmax.html  tensor.html
doc/src/: DebugAndLogging.md  Getting_Started_FusionAPI.md  LRN.rst  MIOpen_Porting_Guide.md  activation.md  activation.rst  apireference.md  apireference.rst  batchnorm.md  batchnorm.rst  cache.md  cache.rst  changelog.md  citation.rst  conf.py  convolution.md  convolution.rst  debug_and_logging.rst  driver.md  dropout.md  dropout.rst  embed.md  embed.rst  find_and_immediate.md  find_and_immediate.rst  finddb.md  finddb.rst  fusion.md  fusion.rst  gemm.rst  handle.md  handle.rst  index.md  index.rst  install.md  intro_fusion_api.rst  loss.md  lrn.md  lrn.rst  mi200a_specifics.rst  (+15 more)
driver/: CBAInferFusion_driver.hpp  CMakeLists.txt  InputFlags.cpp  InputFlags.hpp  MLOpenDriver.cpp  README.md  activ.cpp  activ.hpp  activ_driver.hpp  adam_driver.hpp  adaptiveavgpool_driver.hpp  addlayernorm_driver.hpp  any_driver.hpp  argmax.cpp  argmax.hpp  argmax_driver.hpp  argmin_driver.hpp  avgpool_driver.hpp  bn_driver.hpp  bnorm.cpp  bnorm.hpp  calcerr.hpp  cat.cpp  cat.hpp  cat_driver.hpp  conv.cpp  conv.hpp  conv1.cpp  conv2.cpp  conv3.cpp  convInfer_driver.hpp  conv_common.cpp  conv_common.hpp  conv_driver.hpp  conv_verify.hpp  convbfp16.cpp  convbfp8.cpp  convfp16.cpp  convfp8.cpp  convint8.cpp  (+204 more)
fin/: CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  install_deps.cmake  requirements.txt
fin/cmake/: Analyzers.cmake  ClangTidy.cmake  EnableCompilerWarnings.cmake  FindOpenCL.cmake  MainDoc.cmake  SphinxDoc.cmake  googletest.cmake  hip-config.cmake  rocm-path.cmake
fin/src/: CMakeLists.txt  base64.cpp  fin.cpp  main.cpp  tensor.cpp
fin/tests/: CMakeLists.txt  fin_input_find_compile.json  fin_input_find_compile2.json  hello_test.cpp  mem_layout_test.cpp  pdb_check_all.json  pdb_check_gfx906.json  pdb_check_gfx908.json  pdb_check_gfx90a.json
host/driver_offline/: CMakeLists.txt  conv_bwd_driver_offline.cpp  conv_fwd_driver_offline.cpp
host/driver_online/: CMakeLists.txt  conv_fwd_driver_online.cpp
host/online_compilation/: CMakeLists.txt  kernel_includes.cpp.in
speedtests/: CMakeLists.txt  sequences.cpp
src/: CMakeLists.txt  Common.hpp  Convolution.cpp  Convolution.hpp  ConvolutionOCL.cpp  Convolution_API.cpp  Handle.cpp  Handle.hpp  Handle_API.cpp  KernelCache.cpp  KernelCache.hpp  MlOpenConvDirGenFwd.cl  OCLKernel.cpp  OCLKernel.hpp  Tensor.cpp  Tensor.hpp  Tensor_API.cpp  activ.cpp  activ_api.cpp  adam.cpp  adam_api.cpp  adaptiveavgpool.cpp  adaptiveavgpool_api.cpp  addlayernorm.cpp  addlayernorm_api.cpp  any.cpp  any_api.cpp  anyramdb.cpp  argmax.cpp  argmax_api.cpp  argmin.cpp  argmin_api.cpp  avgpool.cpp  avgpool_api.cpp  batch_norm.cpp  batch_norm_api.cpp  binary_cache.cpp  buffer_info.cpp  bz2.cpp  cat.cpp  (+177 more)
src/HIP/: ConvolutionHIP.cpp  HandleHIP.cpp  TensorHIP.cpp
src/Kernels/: Fiji.cd.pdb.txt  Fiji_64_1000.cd.pdb.txt  Fiji_64_1000.cd.rdb.txt  Fiji_64_1050.cd.pdb.txt  Hello.cl  MIOpenBatchNormBwdPerAct.cl  MIOpenBatchNormBwdSpatial.cl  MIOpenBatchNormBwdSpatial_debug.cl  MIOpenBatchNormFwdInferPerAct.cl  MIOpenBatchNormFwdInferSpatial.cl  MIOpenBatchNormFwdTrainPerAct.cl  MIOpenBatchNormFwdTrainSpatial.cl  MIOpenBatchNormFwdTrainSpatial_debug.cl  MIOpenConv1x1.cl  MIOpenConv1x1Bwd.cl  MIOpenConv1x1Fwd.cl  MIOpenConvBwdBias.cl  MIOpenConvBwdWrW1x1.cl  MIOpenConvBwdWrW1x1Mmap.cl  MIOpenConvBwdWrWS2.cl  MIOpenConvBwdWrW_GxL_1x1.cl  MIOpenConvBwdWrW_LxG_5x5.cl  MIOpenConvBwdWrW_LxG_P53.cl  MIOpenConvBwdWrW_LxL_P.cl  MIOpenConvD3x3.cl  MIOpenConvDirGenFwd.cl  MIOpenConvDirUni.cl  MIOpenConvDirUniC.cl  MIOpenConvFFT.cl  MIOpenConvFwd_LxL_11.cl  MIOpenLRNBwd.cl  MIOpenLRNFwd.cl  (+54 more)
test/: CMakeLists.txt  activation.cpp  args.hpp  bn_3d_peract_test.cpp  bn_3d_spatial_test.cpp  bn_aux.cpp  bn_peract_test.cpp  bn_spatial_nhwc_test.cpp  bn_spatial_test.cpp  cache.cpp  cba_inference.cpp  cbna_inference.cpp  check_numerics_test.cpp  conv.cpp  conv2d.cpp  conv2d_bias.cpp  conv2d_find2.cpp  conv2d_fp8.cpp  conv2d_fp8.hpp  conv3d.cpp  conv3d.hpp  conv3d_bias.cpp  conv3d_find2.cpp  conv_bias.cpp  conv_common.hpp  cpu_adam.hpp  cpu_adaptiveavgpool.hpp  cpu_addlayernorm.hpp  cpu_any.hpp  cpu_argmax.hpp  cpu_argmin.hpp  cpu_avgpool.hpp  cpu_bias.hpp  cpu_cat.hpp  cpu_conv.hpp  cpu_cumulative_reduction.hpp  cpu_fold.hpp  cpu_glu.hpp  cpu_groupnorm.hpp  cpu_instance_norm.hpp  (+128 more)
tests/: CMakeLists.txt  fin_input_find_compile2.json  pdb_check_gfx906.json  pdb_check_gfx90a.json
(+8276 files in other folders)
